# openstack-node-tagger

./: README.md  requirements.txt  setup.cfg  setup.py  tox.ini
ostag/: __init__.py  ostag.py
ostag/lib/: Tools.py  __init__.py
ostagger/: ostagger.py
ostagger/lib/: Tools.py
