[metadata]
name = ostag
summary = Node tagger for OpenStack deployments
author = jkilpatr
author-email = jkilpatr@redhat.com
home-page = https://github.com/jkilpatr/ostagger
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4


[files]
packages =
    ostagger

[entry_points]
console_scripts =
    ostag = ostag.ostag:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
